Add Cloudflare Web Analytics snippet in app.html: simpler
Thanks Tal! (if it works)

--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,10 @@
 
 <body data-sveltekit-preload-data="hover">
 	<div style="display: contents">%sveltekit.body%</div>
+
+	<!-- Cloudflare Web Analytics -->
+	<script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+		data-cf-beacon='{"token": "bac6319472184609ad210e5a24d600a2"}'></script>
 </body>
 
 </html>
